--- a/Presentation.Rmd
+++ b/Presentation.Rmd
@@ -4,8 +4,10 @@ author: "LTC Nicholas Clark"
 output: ioslides_presentation
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE,warning=FALSE,message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(lubridate)
 ```
 
 
@@ -13,3 +15,86 @@ knitr::opts_chunk$set(echo = TRUE)
 <center>
 ![Drew Conway's Venn Diagram of data science](VennDiag.png){width=450px}
 </center>
+Drew Conway's Venn Diagram of Data Science
+
+## Fundamental Questions{.build}
+
+- What defines success in your business?
+- How is this measured?
+- What can serve as a proxy?
+
+- Increase Funding -> Engagements from Website -> Clicks on Donate Button
+
+## Fundamental Questions{.build}
+
+- What decisions are you making?
+- What data have you collected to support that decision making process?
+- Until these questions are answered, data science can do little to help
+
+## AB Testing
+
+- Will changing my website layout impact the number of donations?
+- Hypothesis: Placing button in middle will increase number of donations
+<center>
+![](web.png){width=450px}
+</center>
+
+## Data
+
+```{r}
+sample.data<-read.csv("click_data.csv")
+sample.data<-sample.data %>% mutate(visit_date=mdy(visit_date))
+summarized.data<-sample.data %>% group_by(month(visit_date))%>%
+  summarise(avg=mean(clicked_adopt_today))
+summarized.data
+```
+
+## Randomizing Experiment
+```{r}
+summarized.data %>% ggplot(aes(x=`month(visit_date)`,y=avg))+
+  geom_point()+geom_line()
+```
+
+## General Technique{.build}
+- Randomly assign visitors to one of `n` web pages
+- Collect number of "successes"
+- After designated time period determine if meaningful difference exists
+
+```{r}
+result<-prop.test(x=c(50,30),n=c(200,200),correct = FALSE)
+result$p.value
+```
+
+## What do these mean?
+
+- Remember we are tied to a decision here, does new webpage generate more donations/clicks?
+
+- If you decide to switch to new webpage, there is a 1.3\% chance you are wasting your time
+
+- Does not make decision for you, must factor in cost.  If new webpage costs double of old webpage that should be accounted for.
+
+```{r}
+result$conf.int
+```
+
+
+## Confidence Interval Analysis
+
+```{r}
+result$conf.int
+```
+
+- Out of 200 people, we would expect 4-35 more to engage with new webpage
+
+- If each engagement is expected to bring in 1 doller (on average) and new webpage costs an additional 50 dollars a month to maintain, may not be worth it
+
+## Warnings
+
+```{r}
+summarized.data %>% ggplot(aes(x=`month(visit_date)`,y=avg))+
+  geom_point()+geom_line()
+```
+- Let's say trial is done in Month 9
+- Does this necessarily mean our results are valid for December?
+
+## 
